# lab1

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  dialog.cpp  dialog.h  funcs.cpp  funcs.h  logic.cpp  logic.h  main.cpp
docs/html/: dialog_8cpp_source.html  dialog_8h.html  dialog_8h__dep__incl.dot  dialog_8h_source.html  files.html  funcs_8cpp_source.html  funcs_8h.html  funcs_8h__dep__incl.dot  funcs_8h__incl.dot  funcs_8h_source.html  graph_legend.html  index.html  logic_8cpp_source.html  logic_8h.html  logic_8h__dep__incl.dot  logic_8h__incl.dot  logic_8h_source.html  main_8cpp_source.html  md_README.html  namespacelogic.html  namespaces.html  pages.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  files_0.js  files_1.js  files_2.js  functions_0.js  namespaces_0.js  pages_0.js  searchdata.js
tests/: CMakeLists.txt  example.txt  tests.cpp
